Fixed dark mode box shadow effects on landing page

--- a/tcf_website/static/base/tcf-style.css
+++ b/tcf_website/static/base/tcf-style.css
@@ -214,7 +214,7 @@ ul {
 /* Chai: card background color is being styled by .card in _card.scss; color will be card-background-color when in dark-mode */
 .card {
   background-color: var(--card-background-color) !important;
-  border: 1px solid var(--input-border-color);
+  /* border: 1px solid var(--input-border-color); */
 }
 .card.bg-tcf-orange {
   background-color: var(--accent-color) !important;
